# learning-ink-smart-contract

Erc20/: Cargo.toml  lib.rs
simple-contract/: Cargo.toml  lib.rs
